syntax = "proto3";

import "google/protobuf/empty.proto";
import "Protos/EssentialData/Common.proto";
option csharp_namespace = "DawnQuant.AShare.Api.EssentialData";

package DawnQuant.AShare.Api.EssentialData;


// 公司行业信息
service IndustryApi {
 
  rpc SaveIndustry(SaveIndustryRequest) returns (SaveIndustryResponse);

  rpc  ParseIndustry(ParseIndustryRequest) returns (ParseIndustryResponse);

  //获取第三级行业
  rpc  GetThreeLevelIndustries(google.protobuf.Empty) returns (GetThreeLevelIndustriesResponse);
}


message SaveIndustryRequest
{
    IndustryDto Entity=1;
}
message SaveIndustryResponse
{
    IndustryDto Entity=1;
}


message ParseIndustryRequest
{
    string First=1;
	string Second =2;
    string Three=3;
}

message ParseIndustryResponse
{
    IndustryDto Entity=1;
}


message GetThreeLevelIndustriesResponse
{
    repeated  IndustryDto Entities=1;
}







